--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -144,9 +144,6 @@
   <data name="ButtonInsert.Content" xml:space="preserve">
     <value>Insert</value>
   </data>
-  <data name="ButtonLogin.Content" xml:space="preserve">
-    <value>Login</value>
-  </data>
   <data name="ButtonNewMail.Content" xml:space="preserve">
     <value>New Mail</value>
   </data>
@@ -171,6 +168,15 @@
   <data name="MenuFlyoutItemA-Z.Text" xml:space="preserve">
     <value>A-Z</value>
   </data>
+  <data name="MenuFlyoutItemInformation.Text" xml:space="preserve">
+    <value>Information</value>
+  </data>
+  <data name="MenuFlyoutItemLogin.Text" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="MenuFlyoutItemLogout.Text" xml:space="preserve">
+    <value>Logout</value>
+  </data>
   <data name="MenuFlyoutItemNewer.Text" xml:space="preserve">
     <value>Newer</value>
   </data>
@@ -185,6 +191,9 @@
   </data>
   <data name="RadioButtonOutlook.Content" xml:space="preserve">
     <value>Outlook</value>
+  </data>
+  <data name="TextBlockEmail.Text" xml:space="preserve">
+    <value>Email</value>
   </data>
   <data name="TextBlockFolders.Text" xml:space="preserve">
     <value>Folders</value>
@@ -210,10 +219,16 @@
   <data name="TextBlockService.Text" xml:space="preserve">
     <value>Select service</value>
   </data>
+  <data name="TextBlockServiceAccount.Text" xml:space="preserve">
+    <value>Service</value>
+  </data>
   <data name="TextBlockSubject.Text" xml:space="preserve">
     <value>Subject</value>
   </data>
   <data name="TextBlockTo.Text" xml:space="preserve">
     <value>To</value>
+  </data>
+  <data name="TextBoxSearch.PlaceholderText" xml:space="preserve">
+    <value>Search here</value>
   </data>
 </root>
