--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -144,9 +144,6 @@
   <data name="ButtonInsert.Content" xml:space="preserve">
     <value>Insert</value>
   </data>
-  <data name="ButtonNewMail.Content" xml:space="preserve">
-    <value>New Mail</value>
-  </data>
   <data name="ButtonOK.Content" xml:space="preserve">
     <value>OK</value>
   </data>
@@ -155,9 +152,6 @@
   </data>
   <data name="ButtonSentMail.Content" xml:space="preserve">
     <value>Sent Mail</value>
-  </data>
-  <data name="ButtonSync.Content" xml:space="preserve">
-    <value>Sync</value>
   </data>
   <data name="CheckBoxRememberMe.Content" xml:space="preserve">
     <value>Remember me</value>
@@ -210,6 +204,9 @@
   <data name="TextBlockName.Text" xml:space="preserve">
     <value>Name</value>
   </data>
+  <data name="TextBlockNewMail.Text" xml:space="preserve">
+    <value>New Mail</value>
+  </data>
   <data name="TextBlockPassword.Text" xml:space="preserve">
     <value>Password</value>
   </data>
@@ -224,6 +221,9 @@
   </data>
   <data name="TextBlockSubject.Text" xml:space="preserve">
     <value>Subject</value>
+  </data>
+  <data name="TextBlockSync.Text" xml:space="preserve">
+    <value>Sync</value>
   </data>
   <data name="TextBlockTo.Text" xml:space="preserve">
     <value>To</value>
