--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -135,6 +135,9 @@
   <data name="AppBarButtonInsert.Label" xml:space="preserve">
     <value>Insert</value>
   </data>
+  <data name="AppBarButtonOK.Label" xml:space="preserve">
+    <value>OK</value>
+  </data>
   <data name="AppBarButtonSend.Label" xml:space="preserve">
     <value>Send</value>
   </data>
