--- a/Strings/uk-ua/Resources.resw
+++ b/Strings/uk-ua/Resources.resw
@@ -135,6 +135,9 @@
   <data name="AppBarButtonInsert.Label" xml:space="preserve">
     <value>Вставити</value>
   </data>
+  <data name="AppBarButtonOK.Label" xml:space="preserve">
+    <value>OK</value>
+  </data>
   <data name="AppBarButtonSend.Label" xml:space="preserve">
     <value>Відправити</value>
   </data>
