--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -168,6 +168,9 @@
   <data name="CheckBoxRememberMe.Content" xml:space="preserve">
     <value>Remember me</value>
   </data>
+  <data name="ComboBoxAttachments.Header" xml:space="preserve">
+    <value>Attachments</value>
+  </data>
   <data name="DropDownButtonSort.Content" xml:space="preserve">
     <value>Sort</value>
   </data>
