--- a/Strings/uk-ua/Resources.resw
+++ b/Strings/uk-ua/Resources.resw
@@ -141,8 +141,14 @@
   <data name="AppBarButtonOK.Label" xml:space="preserve">
     <value>OK</value>
   </data>
+  <data name="AppBarButtonReply.Label" xml:space="preserve">
+    <value>Відповісти</value>
+  </data>
   <data name="AppBarButtonSend.Label" xml:space="preserve">
     <value>Відправити</value>
+  </data>
+  <data name="AppBarButtonSendWithDelay.Label" xml:space="preserve">
+    <value>Час</value>
   </data>
   <data name="AppBarButtonSync.Label" xml:space="preserve">
     <value>Сінхронізувати </value>
