--- a/Strings/uk-ua/Resources.resw
+++ b/Strings/uk-ua/Resources.resw
@@ -144,6 +144,9 @@
   <data name="AppBarButtonReply.Label" xml:space="preserve">
     <value>Відповісти</value>
   </data>
+  <data name="AppBarButtonSelection.Label" xml:space="preserve">
+    <value>Вибір</value>
+  </data>
   <data name="AppBarButtonSend.Label" xml:space="preserve">
     <value>Відправити</value>
   </data>
